3.7.0/_sources/gallery/animation/animation_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/animation/animation_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_animation_animation_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_animation_animation_demo.py:


================
pyplot animation
================

Generating an animation by calling `~.pyplot.pause` between plotting commands.

The method shown here is only suitable for simple, low-performance use.  For
more demanding applications, look at the :mod:`.animation` module and the
examples that use it.

Note that calling `time.sleep` instead of `~.pyplot.pause` would *not* work.

Output generated via `matplotlib.animation.Animation.to_jshtml`.

.. GENERATED FROM PYTHON SOURCE LINES 16-31



.. image-sg:: /gallery/animation/images/sphx_glr_animation_demo_001.png
   :alt: frame 49
   :srcset: /gallery/animation/images/sphx_glr_animation_demo_001.png, /gallery/animation/images/sphx_glr_animation_demo_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np

    np.random.seed(19680801)
    data = np.random.random((50, 50, 50))

    fig, ax = plt.subplots()

    for i, img in enumerate(data):
        ax.clear()
        ax.imshow(img)
        ax.set_title(f"frame {i}")
        # Note that using time.sleep does *not* work here!
        plt.pause(0.1)


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  10.667 seconds)


.. _sphx_glr_download_gallery_animation_animation_demo.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: animation_demo.py <animation_demo.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: animation_demo.ipynb <animation_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
